--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,16 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore custom builds
+/app/assets/builds/*
+!/app/assets/builds/.keep
+
+# Ignore IDE files
+.idea
+
+# Ignore node_modules
+/node_modules
+
+# Ignore .env files
+.env
