fix: update ci configuration with non-deprecated versions. V5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,11 @@ jobs:
           bundler-cache: true
           cache-version: 1
 
+      - name: Prepare Database
+        run: |
+          bin/rails db:create
+          bin/rails db:schema:load
+
       - name: Test
         run: bundle exec rspec
 
