--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,6 @@ on:
 jobs:
   ci_validation:
     runs-on: ubuntu-latest
-    env:
-      RAILS_ENV: test
-      DATABASE_USER: postgres
-      DATABASE_PASSWORD: password
-      DATABASE_HOST: postgres
-
     services:
       postgres:
         image: postgres:alpine
@@ -28,7 +22,11 @@ jobs:
           POSTGRES_PASSWORD: password
         # needed because the postgres container does not provide a healthcheck
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
+    env:
+      RAILS_ENV: test
+      DATABASE_USER: postgres
+      DATABASE_PASSWORD: password
+      DATABASE_URL: "postgres://postgres:password@localhost:5432/events_system_test"
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
