fix: update ci configuration include assets:precompile. V7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
           bin/rails db:create
           bin/rails db:schema:load
 
+      - name: Precompile Assets
+        run: bin/rails assets:precompile
+
       - name: Test
         run: bundle exec rspec
 
